# proto-php-plugin

./: .gitignore  .prototools  Cargo.toml  LICENSE  README.md  releases.json
.github/workflows/: ci.yml  release.yml  update-releases.yml
scripts/: probe-releases.sh
src/: config.rs  proto.rs
tests/: plugin_test.rs
tests/snapshots/: plugin_test__php_tool__creates_shims.snap
